final version of npm package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "author": "GoIncremental",
-  "name": "gi-ui-update",
+  "name": "gi-ui-updated",
   "version": "1.6.3",
   "main": "./server/index.coffee",
   "repository": {
